themes: Add 839a14a2397ccc7f181b1233f791c3864f013735 to list

--- a/themes/inc/themes_content.htm
+++ b/themes/inc/themes_content.htm
@@ -8,7 +8,7 @@
             <img src="/i/t/1024px/preview.png" title="Additional old theme from 2006-08-27 to 2009-08-16 as v.1.1 with a fixed size of ~970px. Structural child of andreas.. themes. Fixed and basically upgraded for Serendipity Styx 2.1+ revisions." alt="1024px">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-20</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-10-06</dd>
     <dd class="theme_maintainers" title="Carl Galloway &amp; Andreas Viklund">Carl Galloway &amp; Andreas Viklund</dd>
 </dl>
 <ul class="theme_actions">
@@ -25,7 +25,7 @@
             <img src="/i/t/adaptation/preview.png" title="Additional old theme from 2008-05-02 to 2009-08-25 as v.0.81 Fixed and basically upgraded for Serendipity Styx 2.1+ revisions." alt="Adaptation">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-23</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-10-06</dd>
     <dd class="theme_maintainers" title="Alp Uçkan">Alp Uçkan</dd>
 </dl>
 <ul class="theme_actions">
@@ -42,7 +42,7 @@
             <img src="/i/t/andreas00/preview.png" title="Additional old theme from 2006-04-10 to 2008-08-16 with a fixed content size of 780px width. Fixed and basically upgraded for Serendipity Styx 2.1+ revisions." alt="Andreas00">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-20</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-10-06</dd>
     <dd class="theme_maintainers" title="Carl Galloway &amp; Andreas Viklund">Carl Galloway &amp; Andreas Viklund</dd>
 </dl>
 <ul class="theme_actions">
@@ -59,7 +59,7 @@
             <img src="/i/t/andreas06/preview.png" title="Additional old theme from 2005-11-28 to 2014-01-08 as v1.1.1, with a fixed content size of 752px width. Fixed and basically upgraded for Serendipity Styx 2.1+ revisions." alt="Andreas06">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-20</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-10-06</dd>
     <dd class="theme_maintainers" title="Carl Galloway, Andreas Viklund">Carl Galloway, Andreas Viklund</dd>
 </dl>
 <ul class="theme_actions">
@@ -76,7 +76,7 @@
             <img src="/i/t/andreas08/preview.png" title="Additional old theme from 2006-10-23 to 2013-10-26 as v2.0, with a fixed content size of 760px width. Fixed and basically upgraded for Serendipity Styx 2.1+ revisions." alt="Andreas08">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-20</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-10-06</dd>
     <dd class="theme_maintainers" title="Carl Galloway, Andreas Viklund">Carl Galloway, Andreas Viklund</dd>
 </dl>
 <ul class="theme_actions">
@@ -110,7 +110,7 @@
             <img src="/i/t/artistic/preview.png" title="Additional old small-screen theme from 2006-08-24 to 2009-08-27 as v.1.1, with a fixed content width of 774px. Fixed and basically upgraded for Serendipity Styx 2.1+ revisions." alt="Artistic">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-23</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-10-06</dd>
     <dd class="theme_maintainers" title="Carl Galloway &amp; Ricky Wilson">Carl Galloway &amp; Ricky Wilson</dd>
 </dl>
 <ul class="theme_actions">
@@ -144,7 +144,7 @@
             <img src="/i/t/barSinister3/preview.png" title="Additional old theme from 2006-04-01 to 2008-02-14 with a fixed content size of 780px width. Fixed and basically upgraded for Serendipity Styx 2.1+ revisions." alt="Bar Sinister">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-21</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-10-06</dd>
     <dd class="theme_maintainers" title="Martin, Carl Galloway">Martin, Carl Galloway</dd>
 </dl>
 <ul class="theme_actions">
@@ -196,7 +196,7 @@
             <img src="/i/t/be-nice/preview.png" title="Additional old theme from 2006-08-26 to 2009-08-17 as v.1.1, with a fixed content size of 758px. Structural child sibling of andreas* themes. Fixed and basically upgraded for Serendipity Styx 2.1+ revisions." alt="Be Nice">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-21</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-10-06</dd>
     <dd class="theme_maintainers" title="Carl Galloway">Carl Galloway</dd>
 </dl>
 <ul class="theme_actions">
@@ -213,7 +213,7 @@
             <img src="/i/t/bex01/preview.png" title="Additional old theme from 2006-05-01 to 2013-10-26, with a fixed content size of 754px. Structural child sibling of andreas* themes. Fixed and basically upgraded for Serendipity Styx 2.1+ revisions." alt="Bex01">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-20</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-10-06</dd>
     <dd class="theme_maintainers" title="Rebecca Hemstad">Rebecca Hemstad</dd>
 </dl>
 <ul class="theme_actions">
@@ -368,7 +368,7 @@
             <img src="/i/t/brownpaper/preview.png" title="Additional old 2-sidebar full-screen theme from 2006-04-28 to 2008-02-14. Fixed and basically upgraded for Serendipity Styx 2.1+ revisions. Now - with 2019 revision - a full modern grid/flexible system theme with a browsers content size up to ~96 percent." alt="Brown Paper">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-15</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-10-06</dd>
     <dd class="theme_maintainers" title="Abdussamad Abdurrazzaq, Ian Styx">Abdussamad Abdurrazzaq, Ian Styx</dd>
 </dl>
 <ul class="theme_actions">
@@ -419,7 +419,7 @@
             <img src="/i/t/ceejay01/preview.png" title="Additional old mid-screen concatenated sidebar to right theme from 2006-08-25 to 2009-08-17 as v.1.1, with a fixed content width of ~869 to 935px. Fixed and basically upgraded for Serendipity Styx 2.1+ revisions." alt="Ceejay01">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-19</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-10-06</dd>
     <dd class="theme_maintainers" title="ceejay">ceejay</dd>
 </dl>
 <ul class="theme_actions">
@@ -436,7 +436,7 @@
             <img src="/i/t/chocolate_fudge/preview.png" title="Additional old theme from 2006-08-25 to 2008-02-14 as v.1.1 Fixed and basically upgraded for Serendipity Styx 2.1+ revisions." alt="Chocolate Fudge">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-19</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-10-06</dd>
     <dd class="theme_maintainers" title="ceejay">ceejay</dd>
 </dl>
 <ul class="theme_actions">
@@ -453,7 +453,7 @@
             <img src="/i/t/chromZv2/preview.png" title="Additional old mid-screen, up to 2-sidebar to right theme from 2007-07-15 to 2009-08-17, with a fixed content width of 760px. Fixed and basically upgraded for Serendipity Styx 2.1+ revisions." alt="ChromZv2">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-19</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-10-06</dd>
     <dd class="theme_maintainers" title="Reinhard Linnemann, Design Free CSS Templates">Reinhard Linnemann, Design Free CSS Templates</dd>
 </dl>
 <ul class="theme_actions">
@@ -538,7 +538,7 @@
             <img src="/i/t/costa-nature/preview.png" title="Additional old theme from 2006-05-02 to 2013-02-07 as v.0.6, with a fixed content size of 700px. Fixed and basically upgraded for Serendipity Styx 2.1+ revisions." alt="CoSTa's Nature Theme">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-18</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-10-06</dd>
     <dd class="theme_maintainers" title="Kostas CoSTa Brzezinski">Kostas CoSTa Brzezinski</dd>
 </dl>
 <ul class="theme_actions">
@@ -777,7 +777,7 @@
             <img src="/i/t/jazzcafe/preview.png" title="Additional old mid-screen, concatenated sidebar to right theme from 2006-03-04 to 2008-08-17, with a fixed content width of 750px. Fixed and basically upgraded for Serendipity Styx 2.1+ revisions." alt="JazzCafe">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-17</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-10-06</dd>
     <dd class="theme_maintainers" title="Piotr Polak and Ahmet Usal">Piotr Polak and Ahmet Usal</dd>
 </dl>
 <ul class="theme_actions">
@@ -845,7 +845,7 @@
             <img src="/i/t/kamouflage/preview.png" title="Additional old theme from 2006-04-08 to 2013-10-26 as v1.1, with a browsers content size of 90 percent. Fixed and basically upgraded for Serendipity Styx 2.1+ revisions. Since being relatively friendly to change the &quot;martial-design&quot;, with 2019 revision chosen to accomplish a modern browsers grid/flex flexible system example." alt="Kamouflage">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-17</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-10-06</dd>
     <dd class="theme_maintainers" title="David Cummins, Ian Styx">David Cummins, Ian Styx</dd>
 </dl>
 <ul class="theme_actions">
@@ -1230,7 +1230,7 @@ Without any theme engine set, all template files are taken from default theme. F
             <img src="/i/t/one_true_layout/preview.png" title="Additional old full-screen, 2-sidebar colorset theme from 2009-08-27. Fixed and basically upgraded for Serendipity Styx 2.1+ revisions." alt="One True Layout">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-15</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-10-06</dd>
     <dd class="theme_maintainers" title="Carl Galloway &amp; Matthias Mees">Carl Galloway &amp; Matthias Mees</dd>
 </dl>
 <ul class="theme_actions">
@@ -1316,7 +1316,7 @@ Without any theme engine set, all template files are taken from default theme. F
             <img src="/i/t/pink-lilies/preview.png" title="Additional old theme from 2006-03-06 to 2009-08-17 with a concatenated sidebar to the right and a fixed size of ~718px width. Fixed and basically upgraded for Serendipity Styx 2.1+ revisions." alt="Pink Lilies">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-16</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-10-06</dd>
     <dd class="theme_maintainers" title="Carl Galloway and Naoko M">Carl Galloway and Naoko M</dd>
 </dl>
 <ul class="theme_actions">
@@ -1402,7 +1402,7 @@ Without any theme engine set, all template files are taken from default theme. F
             <img src="/i/t/reflection/preview.png" title="Additional old theme from 2006-08-28 to 2008-02-14 as v1.1. Design by snop, photo by plasticboy. Fixed and basically upgraded for Serendipity Styx 2.1+ revisions." alt="Reflection">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-16</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-10-06</dd>
     <dd class="theme_maintainers" title="Carl Galloway">Carl Galloway</dd>
 </dl>
 <ul class="theme_actions">
@@ -1437,7 +1437,7 @@ Without any theme engine set, all template files are taken from default theme. F
             <img src="/i/t/roundedcorner/preview.png" title="Additional old theme from 2006-08-13 to 2008-11-13. Fixed and upgraded for Serendipity Styx 2.1+ revisions." alt="RoundedCorner">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-17</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-10-06</dd>
     <dd class="theme_maintainers" title="Abdussamad Abdurrazzaq, Ian Styx">Abdussamad Abdurrazzaq, Ian Styx</dd>
 </dl>
 <ul class="theme_actions">
@@ -1574,7 +1574,7 @@ Without any theme engine set, all template files are taken from default theme. F
             <img src="/i/t/simpla/preview.png" title="Additional old theme from 2010-01-19 with a default, but configurable size of ~760 pixel content width. Fixed and basically upgraded for Serendipity Styx 2.1+ revisions." alt="Simpla">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-16</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-10-06</dd>
     <dd class="theme_maintainers" title="Phu ported by Kunze Media">Phu ported by Kunze Media</dd>
     <dd class="theme_requirements">Serendipity &gt;= 1.5</dd>
 </dl>
@@ -1626,7 +1626,7 @@ Without any theme engine set, all template files are taken from default theme. F
             <img src="/i/t/softenedcells/preview.png" title="Additional old theme from 2006-08-25 to 2009-08-27 as v.1.1 with a concatenated sidebar to the right and a size of ~640 pixel content width. Fixed and basically upgraded for Serendipity Styx 2.1+ revisions." alt="Softened Cells">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-15</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-10-06</dd>
     <dd class="theme_maintainers" title="Carl Galloway">Carl Galloway</dd>
 </dl>
 <ul class="theme_actions">
@@ -1660,7 +1660,7 @@ Without any theme engine set, all template files are taken from default theme. F
             <img src="/i/t/square/preview.png" title="Additional old theme from 2006-10-02 to 2009-02-14 (v1.0.1) with a fixed size of ~900 pixel content width. Fixed and basically upgraded for Serendipity Styx 2.1+ revisions." alt="Square">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-15</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-10-06</dd>
     <dd class="theme_maintainers" title="David Cummins">David Cummins</dd>
 </dl>
 <ul class="theme_actions">
@@ -1728,7 +1728,7 @@ Without any theme engine set, all template files are taken from default theme. F
             <img src="/i/t/translucency/preview.png" title="Additional old theme from 2007-06-10 to 2009-08-14 with a fixed size of ~608 pixel content width. Fixed and basically upgraded for Serendipity Styx 2.1+ revisions." alt="Translucency">
         </picture>
     </dt>
-    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-04-15</dd>
+    <dd class="theme_version">Version 1.0 (N/A GPL), 2020-10-06</dd>
     <dd class="theme_maintainers" title="Christian Hoffmann">Christian Hoffmann</dd>
 </dl>
 <ul class="theme_actions">
@@ -1810,7 +1810,7 @@ Without any theme engine set, all template files are taken from default theme. F
     <dt class="theme_name">
         <picture>
             <source type="image/webp" srcset="/i/t/default-xml/preview.webp">
-            <img src="/i/t/default-xml/preview.png" title="Raw XML output XML-Template theme for the Serendipity Styx Blog system Simple theme from 2006, newly refurbished to work with Serendipity Styx Edition. This theme outputs raw XML on the frontside, to make the content readable by XML-Readers. It does still effect some minor plugin integrations on the backend side, like linktrimmer or amazonchooser, and is more or less meant to be used in a non-too-much-extended core release blog, though it does works with some well known plugin apps, like staticpages, freetags etc." alt="XML Engine (Dev)">
+            <img src="/i/t/default-xml/preview.png" title="Raw XML output XML-Template theme for the Serendipity Styx Blog system Raw XML output XML-Template theme for the Serendipity Styx Blog system Simple theme from 2006, newly refurbished to work with Serendipity Styx Edition. This theme outputs raw XML on the frontside, to make the content readable by XML-Readers. It does still effect some minor plugin integrations on the backend side, like linktrimmer or amazonchooser, and is more or less meant to be used in a non-too-much-extended core release blog, though it does works with some well known plugin apps, like staticpages, freetags etc." alt="XML Engine (Dev)">
         </picture>
     </dt>
     <dd class="theme_version">Version 1.0 (BSD license), 2018-09-05</dd>
