book: Fix index lang for further usage

--- a/book/index.html
+++ b/book/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="" lang="de_DE">
+<html class="" lang="de">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
