--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -460,7 +460,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 6.13 (GPL, Last Updated 2020-10-06)</dd>
+            <dd class="plugin_version">Version 6.14 (GPL, Last Updated 2020-11-07)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian Styx, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.9.0</dd>
         </dl>
@@ -492,7 +492,7 @@
         <h4 class="plugin_summary">Tooltips</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_tooltips</dt>
-            <dd class="plugin_version">Version 1.7 (GPL, Last Updated 2018-08-17)</dd>
+            <dd class="plugin_version">Version 1.8 (GPL, Last Updated 2020-11-07)</dd>
             <dd class="plugin_maintainers">Enrico Stahn</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -500,7 +500,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_tooltips.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_tooltips">GitHub</a></li>
-            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_tooltips" aria-label="Anchor" data-anchorjs-icon=""></a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_tooltips" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_tooltips/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
@@ -880,7 +880,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 6.13 (GPL, Last Updated 2020-10-06)</dd>
+            <dd class="plugin_version">Version 6.14 (GPL, Last Updated 2020-11-07)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian Styx, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.9.0</dd>
         </dl>
@@ -1820,7 +1820,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 6.13 (GPL, Last Updated 2020-10-06)</dd>
+            <dd class="plugin_version">Version 6.14 (GPL, Last Updated 2020-11-07)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian Styx, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.9.0</dd>
         </dl>
@@ -2508,7 +2508,7 @@
         <h4 class="plugin_summary">Markup: Include entry data/templates/blocks</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_includeentry</dt>
-            <dd class="plugin_version">Version 2.23 (GPL, Last Updated 2020-06-05)</dd>
+            <dd class="plugin_version">Version 2.24 (GPL, Last Updated 2020-11-07)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -2636,15 +2636,15 @@
         <h4 class="plugin_summary">Markup: Wiki</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_textwiki</dt>
-            <dd class="plugin_version">Version 1.9 (GPL, Last Updated 2018-08-17)</dd>
+            <dd class="plugin_version">Version 1.10 (GPL, Last Updated 2020-11-07)</dd>
             <dd class="plugin_maintainers">Tobias Schlitt</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Markup text using Text_Wiki</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_textwiki.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_textwiki">GitHub</a></li>
-            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_textwiki" aria-label="Anchor" data-anchorjs-icon=""></a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_textwiki" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_textwiki/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
@@ -2748,7 +2748,7 @@
         <h4 class="plugin_summary">Tooltips</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_tooltips</dt>
-            <dd class="plugin_version">Version 1.7 (GPL, Last Updated 2018-08-17)</dd>
+            <dd class="plugin_version">Version 1.8 (GPL, Last Updated 2020-11-07)</dd>
             <dd class="plugin_maintainers">Enrico Stahn</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -2756,7 +2756,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_tooltips.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_tooltips">GitHub</a></li>
-            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_tooltips" aria-label="Anchor" data-anchorjs-icon=""></a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_tooltips" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_tooltips/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
