--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -624,9 +624,9 @@
         <h4 class="plugin_summary">Cronjob scheduler</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_cronjob</dt>
-            <dd class="plugin_version">Version 1.2 (GPL, Last Updated 2019-08-18)</dd>
+            <dd class="plugin_version">Version 2.0 (GPL, Last Updated 2020-12-02)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Ian Styx</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 3.2</dd>
         </dl>
         <p class="plugin_description">This plugin periodically executes plugins that provide/require periodic tasks. See the configuration of this plugin for details.</p>
         <ul class="plugin_actions">
@@ -1852,9 +1852,9 @@
         <h4 class="plugin_summary">ToDo/Project-List</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_todolist</dt>
-            <dd class="plugin_version">Version 1.31 (GPL, Last Updated 2019-08-18)</dd>
+            <dd class="plugin_version">Version 2.00 (GPL, Last Updated 2020-12-02)</dd>
             <dd class="plugin_maintainers">Steven Tonnesen, Matthias Mees, Ian Styx</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 3.2</dd>
         </dl>
         <p class="plugin_description">Maintain a list of projects and their percentage completion.</p>
         <ul class="plugin_actions">
@@ -2020,9 +2020,9 @@
         <h4 class="plugin_summary">Comment Spice</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_commentspice</dt>
-            <dd class="plugin_version">Version 1.16 (GPL, Last Updated 2020-06-30)</dd>
+            <dd class="plugin_version">Version 2.00 (GPL, Last Updated 2020-12-02)</dd>
             <dd class="plugin_maintainers">Grischa Brockhaus, Ian Styx</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 3.2</dd>
         </dl>
         <p class="plugin_description">Spice up your comments area with goodies like commenters twitter or last posted article link and nofollows by rules.</p>
         <ul class="plugin_actions">
@@ -2068,9 +2068,9 @@
         <h4 class="plugin_summary">Facebook</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_facebook</dt>
-            <dd class="plugin_version">Version 1.03 (GPL, Last Updated 2020-10-21)</dd>
+            <dd class="plugin_version">Version 2.00 (GPL, Last Updated 2020-12-02)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Ian Styx</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 3.2</dd>
         </dl>
         <p class="plugin_description">Imports comments made on facebook postings (like through RSS Graffiti) back into the blog. Also embeds Facebook OpenGraph Meta-Tags into the blog. Note that adding &quot;like&quot;-Buttons to blog entries is achieved via the serendipity_event_social plugin! </p>
         <ul class="plugin_actions">
@@ -2116,9 +2116,9 @@
         <h4 class="plugin_summary">Microblogging (Twitter,Identica)</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_twitter</dt>
-            <dd class="plugin_version">Version 1.73 (GPL, Last Updated 2020-06-29)</dd>
-            <dd class="plugin_maintainers">Grischa Brockhaus, Peter Heimann</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
+            <dd class="plugin_version">Version 2.00 (GPL, Last Updated 2020-12-02)</dd>
+            <dd class="plugin_maintainers">Grischa Brockhaus, Peter Heimann, Ian Styx</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 3.2</dd>
         </dl>
         <p class="plugin_description">Adds a twitter/identica client to the admininistration interface, searches for tweetbacks and announces new articles to a microblogging account.</p>
         <ul class="plugin_actions">
@@ -2428,9 +2428,9 @@
         <h4 class="plugin_summary">Free Wiki links for your entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_wikilinks</dt>
-            <dd class="plugin_version">Version 0.29 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_version">Version 1.00 (GPL, Last Updated 2020-12-02)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Grischa Brockhaus, Ian Styx</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 3.2</dd>
         </dl>
         <p class="plugin_description">You can specify new/existing links to your blog entries via [[title]], link to staticpages via ((title)) and link to both via {{title}}. References can be automatically appended to the blog entry.</p>
         <ul class="plugin_actions">
