--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -2264,11 +2264,11 @@
         <h4 class="plugin_summary">Gallery Display</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_usergallery</dt>
-            <dd class="plugin_version">Version 2.78 (GPL, Last Updated 2020-10-15)</dd>
-            <dd class="plugin_maintainers">Arnan de Gans, Matthew Groeninger, and Stefan Willoughby, Ian Styx</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
+            <dd class="plugin_version">Version 3.00 (GPL, Last Updated 2020-12-06)</dd>
+            <dd class="plugin_maintainers">Arnan de Gans, Matthew Groeninger, Stefan Willoughby, Ian Styx</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 3.2</dd>
         </dl>
-        <p class="plugin_description">Allows anonymous users to view Serendipity media gallery</p>
+        <p class="plugin_description">Allows to publish galleries by media directories out of your MediaLibrary tree. Stackable plugin!</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_usergallery.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_usergallery">GitHub</a></li>
