--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -2312,11 +2312,11 @@
         <h4 class="plugin_summary">Markup: Gallery Image</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_galleryimage</dt>
-            <dd class="plugin_version">Version 1.19 (GPL, Last Updated 2020-12-07)</dd>
+            <dd class="plugin_version">Version 1.20 (GPL, Last Updated 2020-12-07)</dd>
             <dd class="plugin_maintainers">Rob Antonishen, Alexander Mieland, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.0</dd>
         </dl>
-        <p class="plugin_description">Inserts a Gallery album or image using markup text.</p>
+        <p class="plugin_description">Inserts a Menalto Gallery album or image using markup text.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_galleryimage.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_galleryimage">GitHub</a></li>
@@ -2476,11 +2476,11 @@
         <h4 class="plugin_summary">Markup: Gallery Image</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_galleryimage</dt>
-            <dd class="plugin_version">Version 1.19 (GPL, Last Updated 2020-12-07)</dd>
+            <dd class="plugin_version">Version 1.20 (GPL, Last Updated 2020-12-07)</dd>
             <dd class="plugin_maintainers">Rob Antonishen, Alexander Mieland, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.0</dd>
         </dl>
-        <p class="plugin_description">Inserts a Gallery album or image using markup text.</p>
+        <p class="plugin_description">Inserts a Menalto Gallery album or image using markup text.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_galleryimage.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_galleryimage">GitHub</a></li>
