--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -136,7 +136,7 @@
         <h4 class="plugin_summary">Spamblock (Bayes)</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_spamblock_bayes</dt>
-            <dd class="plugin_version">Version 2.05 (GPL, Last Updated 2020-10-06)</dd>
+            <dd class="plugin_version">Version 2.06 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">kleinerChemiker, Malte Paskuda, based upon b8 by Tobias Leupold, Mario Hommmel, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.2</dd>
         </dl>
@@ -172,7 +172,7 @@
         <h4 class="plugin_summary">Amazon Media Button</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_amazonchooser</dt>
-            <dd class="plugin_version">Version 0.85 (GPL, Last Updated 2020-12-03)</dd>
+            <dd class="plugin_version">Version 0.86 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Matthew Groeninger, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -348,7 +348,7 @@
         <h4 class="plugin_summary">Microformats</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_microformats</dt>
-            <dd class="plugin_version">Version 0.50 (GPL, Last Updated 2020-04-24)</dd>
+            <dd class="plugin_version">Version 0.51 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Matthias Gutjahr, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -364,7 +364,7 @@
         <h4 class="plugin_summary">Multilingual entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_multilingual</dt>
-            <dd class="plugin_version">Version 3.00 (GPL, Last Updated 2020-11-27)</dd>
+            <dd class="plugin_version">Version 3.01 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Wesley Hwang-Chung, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1</dd>
         </dl>
@@ -460,7 +460,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 6.18 (GPL, Last Updated 2020-12-04)</dd>
+            <dd class="plugin_version">Version 6.19 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian Styx, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.9.0</dd>
         </dl>
@@ -476,7 +476,7 @@
         <h4 class="plugin_summary">Tagging of entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_freetag</dt>
-            <dd class="plugin_version">Version 4.33 (GPL, Last Updated 2020-12-09)</dd>
+            <dd class="plugin_version">Version 4.34 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Jonathan Arkell, Grischa Brockhaus, Lars Strojny, Malte Paskuda, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -704,7 +704,7 @@
         <h4 class="plugin_summary">Event-Calendar</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_cal</dt>
-            <dd class="plugin_version">Version 1.87 (GPL, Last Updated 2020-08-17)</dd>
+            <dd class="plugin_version">Version 1.88 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -736,7 +736,7 @@
         <h4 class="plugin_summary">Guestbook</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_guestbook</dt>
-            <dd class="plugin_version">Version 3.77 (GPL, Last Updated 2020-10-20)</dd>
+            <dd class="plugin_version">Version 3.78 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7.0</dd>
         </dl>
@@ -768,7 +768,7 @@
         <h4 class="plugin_summary">Linktrimmer</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_linktrimmer</dt>
-            <dd class="plugin_version">Version 1.7.3 (GPL, Last Updated 2019-10-26)</dd>
+            <dd class="plugin_version">Version 1.7.4 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -880,7 +880,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 6.18 (GPL, Last Updated 2020-12-04)</dd>
+            <dd class="plugin_version">Version 6.19 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian Styx, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.9.0</dd>
         </dl>
@@ -1052,7 +1052,7 @@
         <h4 class="plugin_summary">Microformats</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_microformats</dt>
-            <dd class="plugin_version">Version 0.50 (GPL, Last Updated 2020-04-24)</dd>
+            <dd class="plugin_version">Version 0.51 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Matthias Gutjahr, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -1116,7 +1116,7 @@
         <h4 class="plugin_summary">User Profiles</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_userprofiles</dt>
-            <dd class="plugin_version">Version 0.33 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_version">Version 0.34 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Falk Doering, Matthias Mees, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -1216,7 +1216,7 @@
         <h4 class="plugin_summary">User Profiles</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_userprofiles</dt>
-            <dd class="plugin_version">Version 0.33 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_version">Version 0.34 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Falk Doering, Matthias Mees, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -1232,7 +1232,7 @@
         <h4 class="plugin_summary">User Self-Registration</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_adduser</dt>
-            <dd class="plugin_version">Version 2.48 (GPL, Last Updated 2020-03-22)</dd>
+            <dd class="plugin_version">Version 2.49 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
@@ -1268,7 +1268,7 @@
         <h4 class="plugin_summary">Customizable Entries Archive</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_customarchive</dt>
-            <dd class="plugin_version">Version 1.19 (GPL, Last Updated 2020-10-15)</dd>
+            <dd class="plugin_version">Version 1.20 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0.0</dd>
         </dl>
@@ -1380,7 +1380,7 @@
         <h4 class="plugin_summary">Multilingual entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_multilingual</dt>
-            <dd class="plugin_version">Version 3.00 (GPL, Last Updated 2020-11-27)</dd>
+            <dd class="plugin_version">Version 3.01 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Wesley Hwang-Chung, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1</dd>
         </dl>
@@ -1528,8 +1528,8 @@
         <h4 class="plugin_summary">External PHP Application</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_externalphp</dt>
-            <dd class="plugin_version">Version 1.6 (GPL, Last Updated 2019-10-23)</dd>
-            <dd class="plugin_maintainers">Garvin Hicking</dd>
+            <dd class="plugin_version">Version 1.7 (GPL, Last Updated 2020-12-10)</dd>
+            <dd class="plugin_maintainers">Garvin Hicking, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Shows an external PHP application inside your blog with your blogs design and all formattings. USE WITH CARE, THIS PLUGIN HAS SECURITY IMPLICATIONS AS IT INCLUDES ANY GENERIC PHP FILE! YOU CAN ONLY USE THIS PLUGIN AS ADMIN!</p>
@@ -1660,7 +1660,7 @@
         <h4 class="plugin_summary">Contact Form</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_contactform</dt>
-            <dd class="plugin_version">Version 1.33 (GPL, Last Updated 2020-10-15)</dd>
+            <dd class="plugin_version">Version 1.34 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0.0</dd>
         </dl>
@@ -1692,7 +1692,7 @@
         <h4 class="plugin_summary">Event-Calendar</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_cal</dt>
-            <dd class="plugin_version">Version 1.87 (GPL, Last Updated 2020-08-17)</dd>
+            <dd class="plugin_version">Version 1.88 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -1756,7 +1756,7 @@
         <h4 class="plugin_summary">Guestbook</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_guestbook</dt>
-            <dd class="plugin_version">Version 3.77 (GPL, Last Updated 2020-10-20)</dd>
+            <dd class="plugin_version">Version 3.78 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7.0</dd>
         </dl>
@@ -1788,7 +1788,7 @@
         <h4 class="plugin_summary">Newsbox</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_newsbox</dt>
-            <dd class="plugin_version">Version 1.2 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_version">Version 1.3 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Jude Anthony, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.7</dd>
         </dl>
@@ -1820,7 +1820,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 6.18 (GPL, Last Updated 2020-12-04)</dd>
+            <dd class="plugin_version">Version 6.19 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian Styx, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.9.0</dd>
         </dl>
@@ -1836,8 +1836,8 @@
         <h4 class="plugin_summary">Suggest entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_suggest</dt>
-            <dd class="plugin_version">Version 0.14 (Commercial, Last Updated 2018-04-06)</dd>
-            <dd class="plugin_maintainers">Garvin Hicking</dd>
+            <dd class="plugin_version">Version 0.15 (Commercial, Last Updated 2020-12-10)</dd>
+            <dd class="plugin_maintainers">Garvin Hicking, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
         <p class="plugin_description">Allows non-registered authors to suggest entries for publishing</p>
@@ -1904,8 +1904,8 @@
         <h4 class="plugin_summary">Discussion forum / phpBB comment mirroring</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_forum</dt>
-            <dd class="plugin_version">Version 0.42 (GPL, Last Updated 2020-07-01)</dd>
-            <dd class="plugin_maintainers">Alexander 'dma147' Mieland, http://blog.linux-stats.org, dma147@linux-stats.org</dd>
+            <dd class="plugin_version">Version 0.43 (GPL, Last Updated 2020-12-10)</dd>
+            <dd class="plugin_maintainers">Alexander 'dma147' Mieland, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Provides a complete discussion forum to your users. Can alternatively provide to mirror comments into a phpBB installation.</p>
@@ -1920,7 +1920,7 @@
         <h4 class="plugin_summary">Downloadmanager</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_downloadmanager</dt>
-            <dd class="plugin_version">Version 1.46 (GPL, Last Updated 2020-10-15)</dd>
+            <dd class="plugin_version">Version 1.47 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Alexander 'dma147' Mieland, Grischa Brockhaus, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
@@ -2132,7 +2132,7 @@
         <h4 class="plugin_summary">Newsbox</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_newsbox</dt>
-            <dd class="plugin_version">Version 1.2 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_version">Version 1.3 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Jude Anthony, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.7</dd>
         </dl>
@@ -2248,7 +2248,7 @@
         <h4 class="plugin_summary">Extended options for media manager</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_imageselectorplus</dt>
-            <dd class="plugin_version">Version 2.00 (GPL, Last Updated 2020-12-07)</dd>
+            <dd class="plugin_version">Version 2.01 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Vladimir Ajgl, Adam Charnock, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.0.0</dd>
         </dl>
@@ -2360,7 +2360,7 @@
         <h4 class="plugin_summary">Thumbnail Page</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_thumbnails</dt>
-            <dd class="plugin_version">Version 1.4.1 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 1.4.2 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Cameron MacFarland</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 0.7</dd>
         </dl>
@@ -2412,7 +2412,7 @@
         <h4 class="plugin_summary">Extended options for media manager</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_imageselectorplus</dt>
-            <dd class="plugin_version">Version 2.00 (GPL, Last Updated 2020-12-07)</dd>
+            <dd class="plugin_version">Version 2.01 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Vladimir Ajgl, Adam Charnock, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.0.0</dd>
         </dl>
@@ -2460,7 +2460,7 @@
         <h4 class="plugin_summary">Markup: Autotitle</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_autotitle</dt>
-            <dd class="plugin_version">Version 0.4 (GPL, Last Updated 2020-12-03)</dd>
+            <dd class="plugin_version">Version 0.5 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Malte Paskuda, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -2780,7 +2780,7 @@
         <h4 class="plugin_summary">VG Wort</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_vgwort</dt>
-            <dd class="plugin_version">Version 0.5 (GPL, Last Updated 2020-09-26)</dd>
+            <dd class="plugin_version">Version 0.6 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Malte Paskuda, Thomas Hochstein</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.2.1</dd>
         </dl>
@@ -2848,7 +2848,7 @@
         <h4 class="plugin_summary">Polls</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_pollbox</dt>
-            <dd class="plugin_version">Version 2.20 (GPL, Last Updated 2018-04-06)</dd>
+            <dd class="plugin_version">Version 2.21 (GPL, Last Updated 2020-12-10)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Matthias Mees</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
