--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -1136,9 +1136,9 @@
         <h4 class="plugin_summary">External user authentication (LDAP)/tracking</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_externalauth</dt>
-            <dd class="plugin_version">Version 1.23 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 1.23 (GPL, Last Updated 2020-12-15)</dd>
             <dd class="plugin_maintainers">Garvin Hicking/Justin Alcorn</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 0.8</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Allows to use external ressource to validate logins. Logins will be cached in the Serendipity database framework. This plugin can also track logins inside the Database.</p>
         <ul class="plugin_actions">
@@ -2004,9 +2004,9 @@
         <h4 class="plugin_summary">Comment Edit</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_commentedit</dt>
-            <dd class="plugin_version">Version 0.2.3 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 0.4 (GPL, Last Updated 2020-12-15)</dd>
             <dd class="plugin_maintainers">Malte Paskuda</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.5</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Let user's edit their comments after they posted them.</p>
         <ul class="plugin_actions">
@@ -2360,9 +2360,9 @@
         <h4 class="plugin_summary">Thumbnail Page</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_thumbnails</dt>
-            <dd class="plugin_version">Version 1.4.2 (GPL, Last Updated 2020-12-10)</dd>
+            <dd class="plugin_version">Version 1.4.3 (GPL, Last Updated 2020-12-15)</dd>
             <dd class="plugin_maintainers">Cameron MacFarland</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 0.7</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Shows a thumbnail page. Address is index.php?serendipity[page]=thumbs</p>
         <ul class="plugin_actions">
@@ -2540,8 +2540,8 @@
         <h4 class="plugin_summary">Markup: Mobile Output</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_mobile_output</dt>
-            <dd class="plugin_version">Version 1.09 (GPL, Last Updated 2018-04-27)</dd>
-            <dd class="plugin_maintainers">Pelle Boese, Grischa Brockhaus; Ian</dd>
+            <dd class="plugin_version">Version 1.10 (GPL, Last Updated 2020-12-15)</dd>
+            <dd class="plugin_maintainers">Pelle Boese, Grischa Brockhaus, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">This plugin handles mobile devices and outputs optimized XHTML MP markup if it detects a mobile browser and a specially optimized site for iPhone and iPod Touch. It also scales images to fit the display size.</p>
@@ -2716,9 +2716,9 @@
         <h4 class="plugin_summary">Prettify for S9Y</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_prettify</dt>
-            <dd class="plugin_version">Version 1.6.2 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 1.6.3 (GPL, Last Updated 2020-12-15)</dd>
             <dd class="plugin_maintainers">Adam Krause</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.0</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Use Prettify to brush content between PRE tags for simple syntax highlighting.</p>
         <ul class="plugin_actions">
