hc::functions: Fix up oldie
thanks to @surrim

--- a/hc/en/functions.html
+++ b/hc/en/functions.html
@@ -156,7 +156,7 @@
                           <li><span class="var">serendipity_setFormToken</span>: Prevent XSRF attacks by setting a form token within HTTP Forms</li>
                           <li><span class="var">serendipity_loadThemeOptions</span>: Load available/configured options for a specific theme (through config.inc.php of a template directory) into an array.</li>
                           <li><span class="var">serendipity_loadGlobalThemeOptions</span>: Load global available/configured options for a specific theme into an array.</li>
-                          <li><span class="var">serendipity_hash</span>: Return the SHA1 (with pre-hash) of a value (for storing passwords)</li>
+                          <li><span class="var">serendipity_hash</span>: Return the PASSWORD_BCRYPT (with pre-hash) of a value (for storing passwords)</li>
                         </ul>
                       </li>
                       <li><strong><em>include/functions_entries.inc.php</em></strong> : Central functions for entry-related actions
