hc::database: Fix up oldie
thanks to @surrim

--- a/hc/en/database.html
+++ b/hc/en/database.html
@@ -131,7 +131,7 @@
                       <li><span class="var">email</span>: E-Mail</li>
                       <li><span class="var">userlevel</span>: User level (0,1,255) of the user</li>
                       <li><span class="var">right_publish</span>: Whether author is allowed to publish</li>
-                      <li><span class="var">hashtype</span>: Used password hash (0: old md5, 1: sha1)</li>
+                      <li><span class="var">hashtype</span>: Used password hash (2: bcrypt)</li>
                       <li><span class="var">mail_comments</span>: Configuration option “receive mail notifications for comments”</li>
                       <li><span class="var">mail_trackbacks</span>: Configuration option “receive mail notifications for trackbacks”</li>
                     </ul>
